manifests/seraphim/prod/booklore/Service-booklore.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/name: booklore
    app.kubernetes.io/part-of: booklore
    app.kubernetes.io/version: v2.2.1
  name: booklore
  namespace: booklore
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: booklore
