manifests/seraphim/prod/booklore/HTTPRoute-booklore.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/name: booklore
    app.kubernetes.io/part-of: booklore
    app.kubernetes.io/version: v2.2.1
  name: booklore
  namespace: booklore
spec:
  hostnames:
    - booklore.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: booklore
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
